# LunarGlobe

./: .appveyor.yml  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  COPYRIGHT.txt  CREDITS  CREDITS.txt  GOVERNANCE.md  LICENSE.txt  README.md  check_code_format.sh
apps/: 01_first_triangle.cpp  02_dynamic_uniform_buffer.cpp  03_multi_texture.cpp  04_push_constants.cpp  CMakeLists.txt  README.md  globe_cube.cpp  gravity_cube.cpp  gravity_spin.cpp  gravity_triangle.cpp
globe/: CMakeLists.txt  globe_app.cpp  globe_app.hpp  globe_basic_types.hpp  globe_camera.cpp  globe_camera.hpp  globe_clock.cpp  globe_clock.hpp  globe_clock_linux.hpp  globe_event.cpp  globe_event.hpp  globe_font.cpp  globe_font.hpp  globe_glm_include.hpp  globe_logger.cpp  globe_logger.hpp  globe_main.hpp  globe_model.cpp  globe_model.hpp  globe_overlay.cpp  globe_overlay.hpp  globe_resource_manager.cpp  globe_resource_manager.hpp  globe_shader.cpp  globe_shader.hpp  globe_submit_manager.cpp  globe_submit_manager.hpp  globe_texture.cpp  globe_texture.hpp  globe_vulkan_headers.hpp  globe_window.cpp  globe_window.hpp  object_type_string_helper.h
globe/android/: globe_window_android.cpp  globe_window_android.hpp
globe/apple/: globe_window_apple.cpp  globe_window_apple.hpp
globe/linux/: globe_clock_linux.hpp  globe_window_linux.cpp  globe_window_linux.hpp
globe/windows/: globe_clock_win32.hpp  globe_clock_windows.hpp  globe_window_windows.cpp  globe_window_windows.hpp
gravity/: CMakeLists.txt  gravity.cpp  gravity_app.cpp  gravity_app.hpp  gravity_event.cpp  gravity_event.hpp  gravity_logger.cpp  gravity_logger.hpp  gravity_main.hpp  gravity_resource_manager.cpp  gravity_resource_manager.hpp  gravity_shader.cpp  gravity_shader.hpp  gravity_submit_manager.cpp  gravity_submit_manager.hpp  gravity_texture.cpp  gravity_texture.hpp  gravity_vulkan_headers.hpp  gravity_window.cpp  gravity_window.hpp
resources/: build_shaders.sh  generate_spirv.py
resources/fonts/: license.md
resources/models/sascha_willems/: README
resources/shaders/: phong-fs.spv  phong-vs.spv  poscolortex_pushmat-fs.spv  poscolortex_pushmat-vs.spv  position_color-fs.spv  position_color-vs.spv  position_lit_texture-fs.spv  position_lit_texture-vs.spv  position_multi_texture_ellipse-fs.spv  position_multi_texture_ellipse-vs.spv  position_multi_texture_ellipse_pushconst-fs.spv  position_multi_texture_ellipse_pushconst-vs.spv  position_mvp_color-fs.spv  position_mvp_color-vs.spv  position_mvp_texture-fs.spv  position_mvp_texture-vs.spv  position_texture-fs.spv  position_texture-vs.spv  position_transform_pushconst-fs.spv  position_transform_pushconst-vs.spv  position_uniform_buf_color-fs.spv  position_uniform_buf_color-vs.spv
resources/shaders/source/: phong_glsl.frag  phong_glsl.vert  poscolortex_pushmat_glsl.frag  poscolortex_pushmat_glsl.vert  position_color_glsl.frag  position_color_glsl.vert  position_multi_texture_ellipse_glsl.vert  position_multi_texture_ellipse_pushconst_glsl.frag  position_multi_texture_glsl.frag  position_mvp_color_glsl.vert  position_mvp_texture_glsl.frag  position_mvp_texture_glsl.vert  position_transform_pushconst_glsl.vert  position_uniform_buf_color_glsl.frag  position_uniform_buf_color_glsl.vert
resources/textures/: notes.txt
samples/: 01_first_triangle.cpp  02_dynamic_uniform_buffer.cpp  03_multi_texture.cpp  04_push_constants.cpp  05_offscreen_rendering.cpp  05_simple_glm.cpp  06_offscreen_rendering.cpp  07_simple_model_glm.cpp  08_simple_ttf.cpp  CMakeLists.txt  README.md
submodules/: CMakeLists.txt
